src/tests/zustand-pick-from/syntax-errors/pick-from-path-array-templates.js
const user = useGlobalStore.pickFrom(["order", `#${orderId}`]);
